# ngn-sip-attack-detect-defend

./: .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.adapter.yml  docker-compose.attack.yml  docker-compose.dashboard.yml  docker-compose.demo.yml  docker-compose.homer.yml  docker-compose.ids.yml  docker-compose.keycloak.yml  docker-compose.ml.yml  docker-compose.observability.yml  docker-compose.proxy.yml  docker-compose.soar.yml  docker-compose.wazuh.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
ansible/: README.md  inventory.example.yml
attacks/: README.md
attacks/orchestrator/: README.md  __init__.py  attack_matrix.sh  label_emitter.py  pyproject.toml  run_phase.py
caddy/: Caddyfile
dashboard/: .env.example  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/: 01_architecture.md  02_threat_model.md  03_attack_playbook.md  04_detection_rules.md  05_kubernetes_migration.md  06_evaluation_methodology.md  08_llm_triage_design.md  09_soar_runbook.md  12_stack_dashboard.md  13_https_reverse_proxy.md  C1_HEP_RESPONSE_FEATURES.md  DATA_PROVENANCE.md  INTERNET_EXPOSURE.md  OPERATIONS_DEEP_DIVE.md  README.md  SERVICES.md  attack_navigator_layer.json  ethics_authorisation.md  related_work.md  soar_pipeline.md
ids/: README.md
infra/: README.md
ml/: README.md  c1_experiment.py
ml/mlflow/: README.md  conftest.py  pyproject.toml  track_eval.py
ml/src/eval/: compare.py  pyproject.toml
ml/stage1/: README.md  features.py  predict.py  pyproject.toml  train.py
ml/stage1/datasets/: README.md  sip-dataset-2026-06-02.csv
ml/stage2/: Dockerfile  README.md  adversarial_prompts.json  benchmark.py  pyproject.toml  requirements.txt  worker.py
ml/stage2/prompts/: system.md  triage.md
observability/: README.md
scripts/: README.md  anonymize_dataset.py  apply_wazuh_sso.sh  bootstrap.sh  bootstrap_dev_machine.sh  bootstrap_local.sh  bootstrap_vm.sh  capture_traffic.sh  deploy_wazuh_agents.sh  e2e_verify.sh  ensure_suricata_capture.sh  eval_c3_arms.sh  export_dataset.sh  fetch_datasets.sh  ingest_rag_corpus.sh  labeled_attack_demo.sh  live_demo.sh  provision_shuffle.sh  scout_cron.sh  scout_scan.sh  scout_triage.sh  scout_triage_summarizer.py  set_required_checks.sh  setup_host_security.sh  setup_keycloak_sso_clients.sh  smoke_sip_call.sh
(+366 files in other folders)
